fixing background not covering full screen

--- a/style.css
+++ b/style.css
@@ -13,8 +13,11 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
+  width: 100%;
   background: linear-gradient(#5213e7, rgb(158, 72, 255)) no-repeat;
+  background-size: cover;
+  margin: 0;
 }
 
 #startScreen {
